--- a/app/.project
+++ b/app/.project
@@ -34,4 +34,11 @@
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/main/webapp/csvFiles</name>
+			<type>2</type>
+			<locationURI>PROJECT_LOC/csvFiles</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
