Testausgabe NOTAMS Console (RuleDev-RuleView)
OO Files verlinkt (Exception Marcel)

--- a/app/.project
+++ b/app/.project
@@ -36,6 +36,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>src/main/webapp/OO</name>
+			<type>2</type>
+			<locationURI>PROJECT_LOC/OO</locationURI>
+		</link>
+		<link>
 			<name>src/main/webapp/csvFiles</name>
 			<type>2</type>
 			<locationURI>PROJECT_LOC/csvFiles</locationURI>
